--- a/404.html
+++ b/404.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
+<title>Page not found</title>
 <html>
 <head>
 </head>
 <body>
-<p style="text-align: center;"><a href="https://iroha.kr/"><img src="https://iroha.kr/404.png" alt="" width="1920" height="933" /></a></p>
+position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+<a href="https://iroha.kr/"><img src="https://iroha.kr/404.png" alt="" width="1920" height="933" /></a>
 </body>
 </html>
