--- a/404.html
+++ b/404.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <title>Page not found</title>
+<link href="l0g0.png" rel="shortcut icon" type="image/x-icon">
 <html>
 <head>
 </head>
 <body>
-position:absolute;
-  top:50%;
-  left:50%;
-  transform:translate(-50%,-50%);
+.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  }
 <a href="https://iroha.kr/"><img src="https://iroha.kr/404.png" alt="" width="1920" height="933" /></a>
 </body>
 </html>
