--- a/404.html
+++ b/404.html
@@ -1,15 +1,17 @@
-<!DOCTYPE html>
-<title>Page not found</title>
-<link href="l0g0.png" rel="shortcut icon" type="image/x-icon">
-<html>
-<head>
-</head>
-<body>
-.flex {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+<!DOCTYPE HTML>
+<HTML>
+ <HEAD>
+  <TITLE> New Document </TITLE>
+  <style type="text/css">
+  html, body {
+      height: 100%;
+   margin: 0px;
   }
-<a href="https://iroha.kr/"><img src="https://iroha.kr/404.png" alt="" width="1920" height="933" /></a>
-</body>
-</html>
+  </style>
+ </HEAD>
+ <BODY>
+  <div style="height:100%;min-height:100%;width:100%;display:table;">
+   <div style="display: table-cell; vertical-align: middle;text-align:center;"><a href="https://iroha.kr/"><img src="https://iroha.kr/404.png" alt="" width="1920" height="933" /></a></div>
+  </div>
+ </BODY>
+</HTML>
