--- a/404.html
+++ b/404.html
@@ -1,4 +1,6 @@
 <!DOCTYPE HTML>
+<title>Page not found</title>
+<link href="l0g0.png" rel="shortcut icon" type="image/x-icon">
 <HTML>
  <HEAD>
   <TITLE> New Document </TITLE>
