--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
  </HEAD>
  <BODY>
   <div style="height:100%;min-height:100%;width:100%;display:table;">
-   <div style="display: table-cell; vertical-align: middle;text-align:center;"><a href="https://iroha.kr/"><img src="https://iroha.kr/404.png" alt="" width="1920" height="933" /></a></div>
+   <div style="display: table-cell; vertical-align: middle;text-align:center;"><img src="https://iroha.kr/404.png" alt="" width="1920" height="933" /></div>
   </div>
  </BODY>
 </HTML>
